# bluez-samples

./: CMakeLists.txt  bluez.xml  bt-test.sh  common.c  common.h  dbus-bt.c  dbus-bt.h  lat-test-l2cap.sh  lat-test-rfcomm.sh  lat-test.sh  rfcomm-client.c  rfcomm-server.c
